k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qr-cafe
  labels:
    name: qr-cafe
