k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeqr-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeqr-frontend
  template:
    metadata:
      labels:
        app: cafeqr-frontend
    spec:
      containers:
        - name: frontend
          image: cafeqr-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
