k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeqr-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeqr-mongo
  template:
    metadata:
      labels:
        app: cafeqr-mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
