k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cafeqr-frontend
spec:
  selector:
    app: cafeqr-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
