k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cafeqr-mongo
spec:
  selector:
    app: cafeqr-mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
